--- a/assets/style.css
+++ b/assets/style.css
@@ -72,6 +72,23 @@ body {
     transform: translateY(-2px);
     box-shadow: var(--shadow-md);
 }
+.inviter {
+    background: rgb(91, 175, 67);
+    color: var(--primary-color);
+    border: none;
+    padding: 0.5rem 1.5rem;
+    border-radius: var(--radius-sm);
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: var(--shadow-sm);
+    color: white;
+}
+
+.inviter:hover {
+    transform: translateY(-2px);
+    box-shadow: var(--shadow-md);
+}
 
 .container {
     max-width: 1200px;
@@ -280,3 +297,65 @@ body {
         max-height: 85vh;
     }
 }
+
+.form-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 400px;
+    position: absolute;
+    top: 8%;
+    left: 65%;
+    z-index: 100000;
+}
+.form-container h2 {
+    margin-bottom: 15px;
+    font-size: 18px;
+    color: #333;
+
+}
+.form-group {
+    margin-bottom: 15px;
+}
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #555;
+}
+.form-group input, .form-group select, .form-group textarea {
+    width: 100%;
+    padding: 8px 10px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+.form-group input:focus, .form-group select:focus {
+    border-color: #7b61ff;
+    outline: none;
+}
+.form-actions {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+}
+.form-actions button {
+    padding: 8px 16px;
+    font-size: 14px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.form-actions .cancel {
+    background-color: #ddd;
+    color: #333;
+}
+.form-actions .add {
+    background-color: #7b61ff;
+    color: #fff;
+}
+.form-actions .add:hover {
+    background-color: #6a54e0;
+}
+
