deleted the form from the user page

--- a/assets/style.css
+++ b/assets/style.css
@@ -72,7 +72,7 @@ body {
     transform: translateY(-2px);
     box-shadow: var(--shadow-md);
 }
-.inviter {
+.logout {
     background: rgb(91, 175, 67);
     color: var(--primary-color);
     border: none;
@@ -85,7 +85,7 @@ body {
     color: white;
 }
 
-.inviter:hover {
+.logout:hover {
     transform: translateY(-2px);
     box-shadow: var(--shadow-md);
 }
@@ -359,3 +359,4 @@ body {
     background-color: #6a54e0;
 }
 
+/*  */
