--- a/assets/showtask.css
+++ b/assets/showtask.css
@@ -1,9 +1,4 @@
-   /* .icon{
-            font-size: 20%;
-            width: 5px ;
-            height: 10px;  
-            z-index: 555555; 
-          } */
+
           .form-container 
           
         
@@ -243,3 +238,17 @@
               color: #6c757d;
           }
   
+          #icon{
+            font-size: 20%;
+            width: 15px ;
+            height: 15px;
+            cursor:pointer  
+                   
+          }
+
+         #header{
+            display: flex;
+            flex-direction: row;
+            gap: 60px;
+            
+         } 
